# local-positioning-system

./: .gitignore  README.md  meson.build
data/: gschema.xml
src/: Application.vala  Category.vala  Config.vala.in  Instance.vala  InstanceCharacteristic.vala  MainWindow.vala  RFIDReader.vala  RFIDTag.vala  Utils.vala  meson.build
src/Widgets/: EditDialog.vala  HeaderBar.vala  PreferencesDialog.vala  Window.vala
